--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 </div>
 <nav class="d-block d-md-none navbar navbar-expand-lg navbar-default navbar-light bg-transparent sticky-top rounded-3 " >
     <div class="container">
-        <a class="navbar-brand" href="#">فروشگاه</a>
+        <a class="navbar-brand" asp-action="Index" asp-controller="Home">فروشگاه</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="#">ورود</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ثبت نام</a>
+                    <a class="nav-link" asp-action="Register" asp-controller="Home">ثبت نام</a>
                 </li>
 
             </ul>
