--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ورود</a>
+                    <a class="nav-link" asp-action="Login" asp-controller="Accounts">ورود</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-action="Register" asp-controller="Accounts">ثبت نام</a>
@@ -92,7 +92,7 @@
                         </button>
                         <div class="collapse" id="account-collapse">
                             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a href="#" class="link-dark rounded">ورود</a></li>
+                                <li><a href="#" class="link-dark rounded" asp-controller="Accounts" asp-action="Login">ورود</a></li>
                                 <li><a asp-action="Register" asp-controller="Accounts" class="link-dark rounded">ثبت نام</a></li>
                                 <li><a href="#" class="link-dark rounded">ویرایش</a></li>
                                 <li><a href="#" class="link-dark rounded">خروج</a></li>
