add some changes in accounts controller

--- a/MVC/Views/Accounts/SuccessRegister.cshtml
+++ b/MVC/Views/Accounts/SuccessRegister.cshtml
@@ -1,1 +1,1 @@
-﻿<div class="text-center "> ثبت نام به موفقیت انجام شد.</div>
+﻿<div class="text-center mt-5 text-primary"> ثبت نام به موفقیت انجام شد.</div>
