--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -43,6 +43,12 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-action="Register" asp-controller="Accounts">ثبت نام</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ویرایش</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-action="LogOut" asp-controller="Accounts">خروج</a>
+                </li>
 
             </ul>
         </div>
@@ -92,10 +98,10 @@
                         </button>
                         <div class="collapse" id="account-collapse">
                             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a href="#" class="link-dark rounded" asp-controller="Accounts" asp-action="Login">ورود</a></li>
+                                <li><a class="link-dark rounded" asp-controller="Accounts" asp-action="Login">ورود</a></li>
                                 <li><a asp-action="Register" asp-controller="Accounts" class="link-dark rounded">ثبت نام</a></li>
                                 <li><a href="#" class="link-dark rounded">ویرایش</a></li>
-                                <li><a href="#" class="link-dark rounded">خروج</a></li>
+                                <li><a asp-controller="Accounts" asp-action="LogOut" class="link-dark rounded">خروج</a></li>
                             </ul>
                         </div>
                     </li>
