add some features

--- a/MVC/Views/Accounts/Register.cshtml
+++ b/MVC/Views/Accounts/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.ViewModel.RegisterModel
 
 @{
-    ViewData["Title"] = "ثبت نام";
+    ViewData["title"] = "ثبت نام";
 }
 
 <h1>ثبت نام</h1>
