--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -47,7 +47,9 @@
                         <a class="nav-link" href="#">ویرایش</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-action="LogOut" asp-controller="Accounts">خروج</a>
+                        <form asp-action="LogOut" asp-controller="Accounts" method="post">
+                            <button type="submit" class="link-dark rounded">خروج</button>
+                        </form>
                     </li>
                 }
                 else
@@ -109,10 +111,18 @@
                         </button>
                         <div class="collapse" id="account-collapse">
                             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a class="link-dark rounded" asp-controller="Accounts" asp-action="Login">ورود</a></li>
-                                <li><a asp-action="Register" asp-controller="Accounts" class="link-dark rounded">ثبت نام</a></li>
-                                <li><a href="#" class="link-dark rounded">ویرایش</a></li>
-                                <li><a asp-controller="Accounts" asp-action="LogOut" class="link-dark rounded">خروج</a></li>
+                                @if (signInManager.IsSignedIn(User))
+                                {
+                                    <li><a href="#" class="link-dark rounded">ویرایش</a></li>
+                                    <form asp-action="LogOut" asp-controller="Accounts" method="post">
+                                        <button type="submit" class="link-dark rounded">خروج</button>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <li><a class="link-dark rounded" asp-controller="Accounts" asp-action="Login">ورود</a></li>
+                                    <li><a asp-action="Register" asp-controller="Accounts" class="link-dark rounded">ثبت نام</a></li>
+                                }
                             </ul>
                         </div>
                     </li>
