--- a/MVC/Views/ManageUser/AddUserToRole.cshtml
+++ b/MVC/Views/ManageUser/AddUserToRole.cshtml
@@ -25,6 +25,6 @@ else
             </div>
         }
         <input type="hidden" asp-for="@Model.UserId" />
-        <button class="btn btn-primary" type="submit">efj</button>
+        <button class="btn btn-primary" type="submit">افزودن</button>
     </form>
 }
