--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
 <span id="top"></span>
-<div class="container-fluid mx-0">
+<div class="container-fluid mx-0 p-0">
     <header class="d-flex justify-content-center align-items-center border-bottom py-3  text-center bg-secondary text-light">
         <div class="fs-4">
             <span >
