--- a/MVC/wwwroot/css/navstyle.css
+++ b/MVC/wwwroot/css/navstyle.css
@@ -3,16 +3,7 @@
     transition:1s ease-in-out;
     opacity: 0.94;
 }
-body {
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
-	 margin: 0;
-    height: 100%;
-}
 
-html {
-    height: -webkit-fill-available;
-}
 
 main {
     display: flex;
@@ -127,4 +118,20 @@ footer {
 
 #myBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
+}
+.card.cardadmin {
+    height: 250px;
+    overflow-y: auto;
+}
+body {
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
 }
