add reset password with email reset password confirmation

--- a/MVC/Views/Accounts/ChangePassword.cshtml
+++ b/MVC/Views/Accounts/ChangePassword.cshtml
@@ -6,18 +6,23 @@
     <div asp-validation-summary="ModelOnly"></div>
     <div class="form-group">
         <label asp-for="CurrentPassword" class="control-label"></label>
-        <input asp-for="CurrentPassword" class="form-control"/>
+        <input asp-for="CurrentPassword" class="form-control" />
         <span asp-validation-for="CurrentPassword"></span>
     </div>
     <div class="form-group">
         <label asp-for="NewPassword" class="control-label"></label>
-        <input asp-for="NewPassword" class="form-control"/>
+        <input asp-for="NewPassword" class="form-control" />
         <span asp-validation-for="NewPassword"></span>
     </div>
     <div class="form-group">
         <label asp-for="ReNewPassword" class="control-label"></label>
-        <input asp-for="ReNewPassword" class="form-control"/>
+        <input asp-for="ReNewPassword" class="form-control" />
         <span asp-validation-for="ReNewPassword"></span>
     </div>
-    <input type="submit" class="btn btn-primary"/>
+    <input type="submit" class="btn btn-primary" />
 </form>
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
