--- a/MVC/Views/Accounts/Login.cshtml
+++ b/MVC/Views/Accounts/Login.cshtml
@@ -60,6 +60,10 @@
         </div>
     </div>
 </div>
+<div>
+    <a asp-controller="Accounts" asp-action="ForgetPassword" class="btn btn-primary">فراموشی رمز عبور</a>
+    <a asp-action="Register" asp-controller="Accounts" class="btn btn-primary">ثبت نام</a>
+</div>
 @section Scripts
 {
     @{
