--- a/MVC/Views/Accounts/Register.cshtml
+++ b/MVC/Views/Accounts/Register.cshtml
@@ -31,7 +31,9 @@
         </form>
    
 </div>
-
+<div>
+    <a asp-action="Login" asp-controller="Accounts" class="btn btn-primary"> رفتن به صفحه ورود</a>
+</div>
 @section Scripts
 {
     <partial name="_ValidationScriptsPartial" />
